projects/vb6parse/snapshots/parsers/cst/library/datetime/timevalue/timevalue_iif.snap
---
source: projects/vb6parse/tests/library/datetime/timevalue.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: greeting
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: IIf
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: BinaryExpression
                              children:
                                - kind: CallExpression
                                  children:
                                    - kind: Identifier
                                      text: TimeValue
                                    - kind: LeftParenthesis
                                      text: (
                                    - kind: ArgumentList
                                      children:
                                        - kind: Argument
                                          children:
                                            - kind: StringLiteralExpression
                                              children:
                                                - kind: StringLiteral
                                                  text: "\"8:00\""
                                    - kind: RightParenthesis
                                      text: )
                                - kind: Whitespace
                                  text: " "
                                - kind: LessThanOperator
                                  text: "<"
                                - kind: Whitespace
                                  text: " "
                                - kind: CallExpression
                                  children:
                                    - kind: Identifier
                                      text: TimeValue
                                    - kind: LeftParenthesis
                                      text: (
                                    - kind: ArgumentList
                                      children:
                                        - kind: Argument
                                          children:
                                            - kind: StringLiteralExpression
                                              children:
                                                - kind: StringLiteral
                                                  text: "\"12:00\""
                                    - kind: RightParenthesis
                                      text: )
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"Morning\""
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"Afternoon\""
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
